added new element

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-   
-   
+   <input type="text" id="">
+   <h1 id=""></h1>
 
 
    <script src="./script.js"></script>
