--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-   <input type="text" id="">
+   <input type="text" id="example">
    <h1 id=""></h1>
 
 
