--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <input type="text" id="example">
-   <h1 id=""></h1>
+   <h1 id="example1"></h1>
 
 
    <script src="./script.js"></script>
