--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
    <input type="text" id="example" >
-   <h1 id="example1"></h1>
-   
+   <h1 id="example1">Hello</h1>
+
 
    <script src="./script.js"></script>
 </body>
