added new input

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
    <input type="text" id="example" >
    <h1 id="example1"></h1>
 
+   <input type="text" id="">
+   <input type="text" id="">
+
+
+
+
+
+
 
    <script src="./script.js"></script>
 </body>
