added new element

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +8,17 @@
    <title>Document</title>
    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-   <input type="text" id="example" >
-   <h1 id="example1"></h1>
+   <input type="text" id="text">
+   <h1 id="one"></h1>
 
-   <input type="text" id="">
-   <input type="text" id="">
+   Color: <input type="text" id="color">
+   Background color: <input type="text" id="">
 
+   
+   Font family: <input type="text" id="font-family">
+   <h1>Hello world</h1>
 
 
 
@@ -22,4 +27,5 @@
 
    <script src="./script.js"></script>
 </body>
+
 </html>
