added new element

--- a/index.html
+++ b/index.html
@@ -18,12 +18,10 @@
 
    <hr>
    Font family: <input type="text" id="font-family">
+
+
+   Font-size: <input type="range" value="32" min="16" max="50" step="1" id="font-size">
    <h1>Hello world</h1>
-
-
-
-
-
 
    <script src="./script.js"></script>
 </body>
