added new element

--- a/index.html
+++ b/index.html
@@ -14,14 +14,34 @@
    <h1 id="one"></h1>
 
    Color: <input type="text" id="color">
-   Background color: <input type="text" id="">
+   Background color: <input type="text" id="bg-color">
 
    <hr>
    Font family: <input type="text" id="font-family">
 
 
    Font-size: <input type="range" value="32" min="16" max="50" step="1" id="font-size">
-   <h1>Hello world</h1>
+
+
+   <input type="checkbox">Bold
+
+
+   <label>
+      <input type="radio" name="border" value="none" checked>None
+   </label>
+
+   <label>
+      <input type="radio" name="border" value="solid" checked>solid
+   </label>
+
+   <label>
+      <input type="radio" name="border" value="dashed" checked>dashed
+   </label>
+
+   <label>
+      <input type="radio" name="border" value="dotted" checked>dotted
+   </label>
+<h1>Hello world</h1>
 
    <script src="./script.js"></script>
 </body>
