--- a/index.html
+++ b/index.html
@@ -1,66 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Events</title>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
 
-<head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
-   <link rel="stylesheet" href="./style.css">
-</head>
+  <body>
+    <input type="text" id="text" value="Hello world" />
 
-<!-- <body>
-   <input type="text" id="text">
-   <h1 id="one"></h1>
+    <br />
+    <label> Color: <input type="color" value="#000000" id="color" /> </label>
+    <br />
+    <label>
+      Background color: <input type="color" value="#ffffff" id="bg-color" />
+    </label>
+    <br />
+    <label>
+      Font family:
+      <select id="font-family">
+        <option>Times</option>
+        <option>Arial</option>
+        <option>Impact</option>
+        <option>Verdana</option>
+      </select>
+    </label>
+    <br />
+    <label>
+      Font-size:
+      <input
+        type="range"
+        value="32"
+        min="16"
+        max="50"
+        step="1"
+        id="font-size"
+      /><span>32px</span>
+    </label>
+    <br />
+    <label> <input type="checkbox" checked id="bold" /> Bold </label>
+    <label> <input type="checkbox" id="italic" /> Italic </label>
+    <label> <input type="checkbox" id="underline" /> Underline </label>
+    <br />
+    Border:
+    <label>
+      <input type="radio" name="border" value="none" checked /> None
+    </label>
+    <label> <input type="radio" name="border" value="solid" /> Solid </label>
+    <label> <input type="radio" name="border" value="dashed" /> Dashed </label>
+    <label> <input type="radio" name="border" value="dotted" /> Dotted </label>
+    <label> <input type="radio" name="border" value="double" /> Double </label>
+    <label> <input type="radio" name="border" value="groove" /> Groove </label>
+    <br />
+    <label> URL: <input type="url" id="url" value="" /> </label>
 
-   Color: <input type="text" id="color">
-   Background color: <input type="text" id="bg-color">
+    <h1>Hello world</h1>
 
-   <hr>
-   Font family: <input type="text" id="font-family"> -->
-
-
-   Font-size: <input type="range" value="32" min="16" max="50" step="1" id="font-size">
-   <br><br><br>
-
-
-<label>
-   <input type="checkbox" id="normal">normal
-</label>
-
-<label>
-   <input type="checkbox" id="italic">italic
-</label>
-
-<label>
-   <input type="checkbox" id="underline">underline
-</label>
-<br><br><br>
-
-   <label>
-      <input type="radio" name="border" value="none" checked>None
-   </label>
-
-   <label>
-      <input type="radio" name="border" value="solid" checked>solid
-   </label>
-
-   <label>
-      <input type="radio" name="border" value="dashed" checked>dashed
-   </label>
-
-   <label>
-      <input type="radio" name="border" value="dotted" checked>dotted
-   </label>
-   <br><br><br>
-
-   <label>
-      URL:<a href="#" id="example1"><input type="text"></a>
-   </label>
-
-<h1>Hello world</h1>
-
-   <script src="./script.js"></script>
-</body>
-
+    <script src="scripts.js"></script>
+  </body>
 </html>
